got basic idea of page working

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,8 @@ doctype html
 html
     head
         block header
-            title Risk of Rain Item Database
+            block title
+                title Risk of Rain Item Database
             style
                 include ../public/css/styles.css
     body
