added item page. created table for item stats

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,4 +10,6 @@ html
         block navigation
             a(href="/")
                 p Home Page
+            a(href="/build")
+                p Build
         block content
