--- a/views/index.pug
+++ b/views/index.pug
@@ -2,13 +2,10 @@ extends layout.pug
 
 block title
     title Risk of Rain 2 Builder
-block append navigation
-    a(href="/build")
-        p Build
 block content
     h1 Risk of Rain 2 Items
     each item in data
-        a(href="/items/"+item.id)
+        a(href="/item/"+item.id)
             div
                 h2= item.name
                 h3= item.description
