--- a/views/build.pug
+++ b/views/build.pug
@@ -3,19 +3,25 @@ extends layout.pug
 block title
     title="Risk of Rain Build"
 block content
-    -var currentItem=null;
-    form(method='GET')
+    //-var currentItem=null;
+    form(method="POST")
+        //- create another select for item rarity, then compare this string to item string
         label(for="buildItemSelect") Item:
-            select(id="buildItemSelect")
+            select(id="buildItemSelect" name="itemName")
                 each item in data
-                    option(value=item.name) #{item.name}
+                    if(item.name == info.name)
+                        option(value=item.name selected="selected") #{item.name}
+                    else
+                        option(value=item.name) #{item.name}
                     - var currentItem = item;
-        //-
-            implement ajax here for image
+        //-implement ajax here for image
         if(currentItem != null)
-            img(src=item.imageLink alt=item.name class="buildItemImage")
+            img(src=currentItem.imageLink alt=currentItem.name class="buildItemImage")
         label(for="buildAmount") Amount:
-            input(id="buildAmount" type="number" name="amount")
+            input(id="buildAmount" type="number" min="1" max="5000" name="amount" value=info.amount)
+        br
+        button(type="submit") Build
+        
     //-
         label Description:
             input(type='text' name='description' value=product.description)
@@ -24,3 +30,10 @@ block content
         label Price:
             input(type='number' name='price' value=product.price)
         button(type='submit' value='Submit') Submit
+    
+    if (hasInfo)
+        h2="SUCCESS"
+        h3=info.name
+        p=info.amount
+        hr
+        p=info.calcInfo
