Removed rarity. Replaced with image on item select

--- a/views/build.pug
+++ b/views/build.pug
@@ -8,11 +8,13 @@ block content
     //-var currentItem=null;
     form
         //- create another select for item rarity, then compare this string to item string
-        label(for="buildItemRarity") Item Rarity:
-            select(id="buildItemRarity" name="itemRarity")
-                option(name="buildRarityOption" value="common" selected="selected") common
-                option(name="buildRarityOption" value="uncommon") uncommon
-                option(name="buildRarityOption" value="rare") rare
+        //-
+            label(for="buildItemRarity") Item Rarity:
+                select(id="buildItemRarity" name="itemRarity")
+                    option(name="buildRarityOption" value="common" selected="selected") common
+                    option(name="buildRarityOption" value="uncommon") uncommon
+                    option(name="buildRarityOption" value="rare") rare
+        //-div(id="image")
         label(for="buildItemSelect") Item:
             select(id="buildItemSelect" name="itemName")
                 each item in data
@@ -22,6 +24,7 @@ block content
                         option(name="buildItemOption" value=item.name) #{item.name}
                     - var currentItem = item;
         //-implement ajax here for image (will have to use live update)
+        
         if(currentItem != null)
             img(src=currentItem.imageLink alt=currentItem.name id="buildItemImage")
         label(for="buildAmount") Amount:
@@ -39,7 +42,6 @@ block content
         button(type='submit' value='Submit') Submit
     hr
     div(id="result")
-    div(id="rarity")
     //-
         h2="SUCCESS"
         h3=info.name
