modified the pug a lil

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,5 +9,5 @@ block content
             div
                 h2= item.name
                 img(src=item.imageLink alt=item.name)
-                p= item.description
+                //p= item.description
                 
