--- a/Sass/main-styles.scss
+++ b/Sass/main-styles.scss
@@ -1,4 +1,7 @@
-/*Something will go here... someday...*/
+body{
+    background-color:#ddd;
+}
+
 table{
     border:1px solid black;
     border-spacing: 10px;
