--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,7 @@ html
             block title
                 title Risk of Rain Item Database
             style
-                include ../public/css/styles.css
+                include ../public/css/main-styles.css
     body
         block navigation
             a(href="/")
