--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -1,1 +1,1 @@
-body{background-color:white}table{border:1px solid black;border-spacing:10px}
+body{background-color:#eee}table{border:1px solid black;border-spacing:10px}
