Implemented Grid system

--- a/Sass/_variables.scss
+++ b/Sass/_variables.scss
@@ -1,4 +1,20 @@
+//Web Fonts
+@import url('https://fonts.googleapis.com/css?family=Orbitron');
+
+
+//Color Stuffs
+$primary:#052745;
+$secondary:#E7F0F0;
+$accent1:#49204B;
+$accent2:#FFFBB4;
+
+
 //Font Stuffs
+$headerFont:'Orbitron', sans-serif;
+$headerSize:50px;
+$headerWeight:600;
+$headerSubSize:35px;
+$headerSubWeight:100;
 
 
 //Image Stuffs
@@ -8,5 +24,6 @@
 
 
 //Margin Stuffs
+
 
 //Other Variables
