--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,8 +8,9 @@ html
                 include ../public/css/main-styles.css
     body
         block navigation
-            a(href="/")
-                p Home Page
-            a(href="/build")
-                p Build
+            nav
+                a(href="/")
+                    p Home Page
+                a(href="/build")
+                    p Build
         block content
