--- a/views/index.pug
+++ b/views/index.pug
@@ -3,11 +3,12 @@ extends layout.pug
 block title
     title Risk of Rain 2 Builder
 block content
-    h1 Risk of Rain 2 Items
-    each item in data
-        a(href="/item/"+item.id)
-            div
-                h2= item.name
-                img(src=item.imageLink alt=item.name)
-                //p= item.description
+    div(class="indexPage")
+        h1 Risk of Rain 2 Items
+        each item in data
+            a(href="/item/"+item.id)
+                div
+                    h2= item.name
+                    img(src=item.imageLink alt=item.name)
+                    //p= item.description
                 
