--- a/Sass/_variables.scss
+++ b/Sass/_variables.scss
@@ -15,6 +15,8 @@ $headerSize:50px;
 $headerWeight:600;
 $headerSubSize:35px;
 $headerSubWeight:100;
+$bodyLargeSize:25px;
+$bodySmallSize:20px;
 
 
 //Image Stuffs
