--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,8 +9,6 @@ html
     body
         block navigation
             nav
-                a(href="/")
-                    p Home Page
-                a(href="/build")
-                    p Build
+                a(href="/") Home Page
+                a(href="/build") Build
         block content
