--- a/views/item.pug
+++ b/views/item.pug
@@ -26,15 +26,9 @@ block content
                 - var stackingVar2 = (item.stackingVar2 * 100).toFixed(2);
                 - var stackingValue2 = (item.stackingValue2 * 100).toFixed(2);
 
-    
+
         h1(class=item.rarity) #{item.name}
         img(src=item.imageLink alt=item.name)
-        h2= item.description
-        
-        //-div(class= "websiteContent")
-            p= item.content
-        p="Stack Type: "+item.stackType
-        
         div(class= "itemStats")
             table
                 tr
@@ -49,6 +43,15 @@ block content
                         td=stackingVar2+stackSuffix2+" "+item.stackingName2
                         td=stackingValue2+stackSuffix2+" "+item.stackingName2
                         //-+" per stack"
+        
+        h2= item.description
+        
+        //-div(class= "websiteContent")
+            p= item.content
+        p="Stack Type: "+item.stackType
+        p="Rarity: "+item.rarity
+        
+        
         
     
     
